# Advent-of-Code

./: .gitignore
Digital-plumber/: .project
Digital-plumber/src/: Digital-plumber.cpp
Tubes-19/: .project
Tubes-19/src/: Tubes-19.cpp
compressor-conflagration-23/: input.txt  main.cpp  meson.build  output.txt  project.cpp  project.hpp
dueling-generators-15/: .project
dueling-generators-15/src/: dueling-generators-15.cpp
duet-18/: .project
duet-18/src/: duet-18.cpp  output.txt
electromagnetic-moat-24/: main.cpp
fractal-art-21/: main.cpp  matrix.cpp  matrix.h
halting-problem-25/: main.cpp  meson.build
hex-ed/: .project  input.txt
hex-ed/src/: hex-ed.cpp
knot-hash-10/: .project
knot-hash-10/src/: funkcje.cpp  funkcje_UF.cpp  knot-hash-10.cpp  knot-hash.hpp  union-find.hpp
packet-scanners-13/: .project
packet-scanners-13/src/: packet-scanners-13.cpp
particle-swarm-20/: main.cpp
permutation-promenade-16/: .project  input.txt
permutation-promenade-16/src/: permutation-promenade-16.cpp
recursive-circus/: .cproject  .project  input.txt
recursive-circus/src/: funkcje.cpp  rec_circ.h  recursive-circus.cpp
registers_8/: .project
registers_8/src/: registers_8.cpp
spinlock-17/: .project
spinlock-17/src/: spinlock-17.cpp
sporfica-virus-22/: main.cpp  meson.build
stream-processing-9/: .project
stream-processing-9/src/: stream-processing-9.cpp
